--- a/prince/res/css/beamer.css
+++ b/prince/res/css/beamer.css
@@ -1,7 +1,7 @@
 @namespace mml url("http://www.w3.org/1998/Math/MathML");
 @namespace sw url("http://www.sciword.com/namespaces/sciword");
 
-beamerframe, stepnumberedListItem, stepbulletListItem, alertstepnumberedListItem, alertstepbulletListItem, 
+beamerframe, stepnumberedListItem, stepbulletListItem, alertstepnumberedListItem, alertstepbulletListItem,
 frametitle, framesubtitle, institute {
   -moz-user-select: text;
 }
@@ -10,8 +10,8 @@ beamerframe {
   display: block;
   position: relative;
   margin-left: 100px;
-  padding: 10px 0px;
-  border: thin solid black; 
+  padding: 10px 0;
+  border: thin solid black;
   background-color: #EEE0E0;
   -moz-border-radius: 10px;
 }
@@ -19,84 +19,84 @@ beamerframe {
 *[showinvis="true"] stepnumberedlist {
   display: block;
   padding: 10px;
-  border: 5px solid rgb(190,220,220); 
+  border: 5px solid rgb(190,220,220);
   -moz-border-radius: 20px;
 }
 
 *[showinvis="true"] stepbulletlist {
   display: block;
   padding: 10px;
-  border: 5px solid rgb(190,220,220); 
+  border: 5px solid rgb(190,220,220);
   -moz-border-radius: 20px;
 }
 
 *[showinvis="true"] alertstepnumberedlist {
   display: block;
   padding: 10px;
-  border: 5px solid rgb(255,220,220); 
+  border: 5px solid rgb(255,220,220);
   -moz-border-radius: 20px;
 }
 
 *[showinvis="true"] alertstepbulletlist {
   display: block;
   padding: 10px;
-  border: 5px solid rgb(255,220,220); 
+  border: 5px solid rgb(255,220,220);
   -moz-border-radius: 20px;
 }
 
 *[showinvis="true"] stepnumberedListItem {
   display: block;
-  border: 5px solid rgb(190,210,220); 
+  border: 5px solid rgb(190,210,220);
   -moz-border-radius: 20px;
 }
 
 *[showinvis="true"] stepbulletListItem {
   display: block;
-  border: 5px solid rgb(190,210,220); 
+  border: 5px solid rgb(190,210,220);
   -moz-border-radius: 20px;
 }
 
 *[showinvis="true"] alertstepnumberedListItem {
   display: block;
-  border: 5px solid rgb(255,210,220); 
+  border: 5px solid rgb(255,210,220);
   -moz-border-radius: 20px;
 }
 
 *[showinvis="true"] alertstepbulletListItem {
   display: block;
-  border: 5px solid rgb(255,210,220); 
+  border: 5px solid rgb(255,210,220);
   -moz-border-radius: 20px;
 }
 
 stepnumberedListItem {
   display: block;
-  border: 5px solid rgb(190,210,220); 
+  border: 5px solid rgb(190,210,220);
   -moz-border-radius: 20px;
 }
 
 stepbulletListItem {
   display: block;
-  border: 5px solid rgb(190,210,220); 
+  border: 5px solid rgb(190,210,220);
   -moz-border-radius: 20px;
 }
 
 alertstepnumberedListItem {
   display: block;
-  border: 5px solid rgb(255,210,220); 
+  border: 5px solid rgb(255,210,220);
   -moz-border-radius: 20px;
 }
 
 alertstepbulletListItem {
   display: block;
-  border: 5px solid rgb(255,210,220); 
+  border: 5px solid rgb(255,210,220);
   -moz-border-radius: 20px;
 }
 
 stepnumberedListItem,
 stepbulletListItem,
 alertstepnumberedListItem,
-alertstepbulletListItem { margin: 0pt; 
-       padding: 0pt; 
+alertstepbulletListItem { margin: 0;
+       padding: 0;
        display: list-item;}
 
 stepnumberedlist,
