--- a/prince/res/css/book.css
+++ b/prince/res/css/book.css
@@ -35,11 +35,11 @@ chapter {
   counter-increment: chapter;
   counter-reset: section;
 /*  counter-reset: theorem; */
-}  
+}
 
 chapter sectiontitle {
   display: block;
-  margin: 10pt 0pt 0pt 0pt;
+  margin: 10pt 0 0 0;
   font-size: 20pt;
   font-weight: bold;
   text-align: left;
@@ -54,11 +54,11 @@ section {
   counter-increment: section;
 /*  counter-reset: subsection;
   counter-reset: theorem; */
-}  
+}
 
 section sectiontitle {
   display: block;
-  margin: 10pt 0pt 0pt 0pt;
+  margin: 10pt 0 0 0;
   font-size: 18pt;
   font-weight: bold;
 }
@@ -69,7 +69,7 @@ section>sectiontitle:before {
 }
 
 section defaulttitletag:after {
-  content: "Replace this section title"; 
+  content: "Replace this section title";
   color: red;
 }
 
@@ -81,7 +81,7 @@ subsection{
 
 subsection sectiontitle {
   display: block;
-  margin: 10pt 0pt 0pt 0pt;
+  margin: 10pt 0 0 0;
   font-size: 12pt;
 }
 
@@ -90,7 +90,7 @@ subsection>sectiontitle:before {
 }
 
 subsection defaulttitletag:after {
-  content: "Replace this subsection title"; 
+  content: "Replace this subsection title";
   color: red;
 }
 
@@ -102,7 +102,7 @@ subsubsection {
 
 subsubsection sectiontitle {
   display: block;
-  margin: 10pt 0pt 0pt 0pt;
+  margin: 10pt 0 0 0;
   font-size: 10pt;
   font-weight: bold;
 }
@@ -112,7 +112,7 @@ subsubsection>sectiontitle:before {
 }
 
 subsubsection defaulttitletag:after {
-  content: "Replace this subsubsection title"; 
+  content: "Replace this subsubsection title";
   color: red;
 }
 
@@ -132,7 +132,7 @@ paragraph>sectiontitle:before {
 }
 
 paragraph defaulttitletag:after {
-  content: "Replace this subsubsubsection title"; 
+  content: "Replace this subsubsubsection title";
   color: red;
 }
 
@@ -145,7 +145,7 @@ subparagraph>sectiontitle:before {
 }
 
 subparagraph defaulttitletag:after {
-  content: "Replace this subsubsubsubsection title"; 
+  content: "Replace this subsubsubsubsection title";
   color: red;
 }
 
@@ -210,9 +210,9 @@ maketitle, maketoc, makelof, makelot {
 frontmatter, mainmatter, backmatter, appendix {
   display: block;
   position: relative;
-  margin-left: 0px;
-  padding: 10px 0px;
-  border: thin solid black; 
+  margin-left: 0;
+  padding: 10px 0;
+  border: thin solid black;
   background-color: #E1EEFD;
   -moz-border-radius: 10px;
 }
@@ -260,23 +260,23 @@ p {
 
 bodyText {
   display: block;
-  margin: 10pt 0pt 5pt 0pt;
+  margin: 10pt 0 5pt 0;
 }
 
 bodyMath {
   display: block;
-  margin: 0pt 10pt 0pt 5pt;
+  margin: 0 10pt 0 5pt;
   color: rgb(0,128,64);
 }
 
 shortQuote {
-  display: block; 
+  display: block;
   margin-left: 20pt;
   margin-right: 20pt;
 }
 
 longQuotation {
-  display: block; 
+  display: block;
   margin-left: 20pt;
   margin-right: 20pt;
 }
@@ -313,7 +313,7 @@ pre, verbatim {
   font-family: Courier; white-space: pre
 }
 */
-  
+
 /***********************/
 /* Tagged run elements */
 /***********************/
@@ -323,7 +323,7 @@ emphasized {
   color: rgb(9,62,125)
 }
 
-emphasized span.inlineMath {
+emphasized .inlineMath {
   color: rgb(255,0,255)
 }
 
@@ -446,8 +446,8 @@ td {
 
 /* Not in article.css (gp)
 item {
-  margin: 0pt 0pt 0pt 0pt; 
-  padding: 10pt 0pt 0pt 20pt; 
+  margin: 0 0 0 0;
+  padding: 10pt 0 0 20pt;
   display: list-item
 }
 */
@@ -458,7 +458,7 @@ item:before {
   counter-increment: item;
 }
 */
-   
+
 /* Not in article.css (gp)
 enumerate {
   counter-reset: item;
@@ -473,7 +473,7 @@ description {
 
 /* Not in article.css (gp)
 itemize {
-  list-style: disc; 
+  list-style: disc;
   counter-reset: item;
 }
 */
@@ -483,7 +483,6 @@ itemize {
 /***************/
 
 img {
-  display: inline; 
-  margin: 2em
-} 
+  display: inline;
+}
 
