I've made enough changes to verbatim handling that I want to save a checkpoint. Still more work to do, though.

--- a/prince/res/css/baselatex.css
+++ b/prince/res/css/baselatex.css
@@ -27,6 +27,10 @@ mml|mi[msiclass="enginefunction"] {text-decoration: underline; }
 
 pre, verbatim { font-family: Courier; white-space: pre }
 
+verbatim bodyText {
+  margin: 0;
+  padding: 0;
+}
 numberedListItem,
 bulletListItem,
 descriptionListItem {
