Make it so all tempinput mi's are in green brackets.

--- a/prince/res/css/latex.css
+++ b/prince/res/css/latex.css
@@ -271,50 +271,20 @@ mml|mi [msimathname="true"] {color: gray; }
 
 
 
-mml|mfrac mml|mi[tempinput="true"]::before,
-mml|msup mml|mi + mml|mi[tempinput="true"]::before,
-mml|msub mml|mi + mml|mi[tempinput="true"]::before,
-mml|mroot mml|mi[tempinput="true"]::before,
-mml|msqrt mml|mi[tempinput="true"]::before,
-mml|munder mml|mi[tempinput="true"]::before,
-mml|mover mml|mi[tempinput="true"]::before,
-mml|munderover mml|mi[tempinput="true"]::before,
-mml|msub mml|mi[tempinput="true"]::before,
-mml|msup mml|mi[tempinput="true"]::before,
-mml|msubsup mml|mi[tempinput="true"]::before,
-mml|msidisplay mml|mi[tempinput="true"]::before,
-mml|menclose mml|mi[tempinput="true"]::before
+mml|mi[tempinput="true"]::before
 {
   content: "[";
   color: green;
 }
 
 
-mml|mfrac mml|mi[tempinput="true"]::after,
-mml|msup mml|mi + mml|mi[tempinput="true"]::after,
-mml|msub mml|mi + mml|mi[tempinput="true"]::after,
-mml|mroot mml|mi[tempinput="true"]::after,
-mml|msqrt mml|mi[tempinput="true"]::after,
-mml|munder mml|mi[tempinput="true"]::after,
-mml|mover mml|mi[tempinput="true"]::after,
-mml|munderover mml|mi[tempinput="true"]::after,
-mml|msub mml|mi[tempinput="true"]::after,
-mml|msup mml|mi[tempinput="true"]::after,
-mml|msubsup mml|mi[tempinput="true"]::after,
-mml|msidisplay mml|mi[tempinput="true"]::after,
-mml|msienclose mml|mi[tempinput="true"]::after
+mml|mi[tempinput="true"]::after
 {
   content: "]";
   color: green;
 }
 
-mml|mfrac mml|mi[tempinput="true"],
-mml|msup mml|mi + mml|mi[tempinput="true"],
-mml|msub mml|mi + mml|mi[tempinput="true"],
-mml|mroot mml|mi[tempinput="true"],
-mml|msqrt mml|mi[tempinput="true"],
-mml|msidisplay mml|mi[tempinput="true"],
-mml|menclose mml|mi[tempinput="true"]
+mml|mi[tempinput="true"]
 {
   letter-spacing: 0; /*-0.015em;*/
   -moz-user-select: text;
