On the Mac, took out a rule that made the text on context submenus too large

--- a/toolkit/themes/pinstripe/global/menu.css
+++ b/toolkit/themes/pinstripe/global/menu.css
@@ -51,7 +51,7 @@ menuitem {
   -moz-box-align: center;
   color: MenuText;
   font: -moz-pull-down-menu;
-  font-size: larger;
+  /* font-size: larger; */
   list-style-image: none;
   -moz-image-region: auto;
 }
